Sun Feb 12 16:01:29 GMT 2006  Olly Betts <olly@survex.com>

	* java/README: Note that the bindings work with the Eclipse javac
	  and GIJ 4.0.1.

Sun Feb 12 13:30:15 GMT 2006  Olly Betts <olly@survex.com>

	* guile/util.i: Replace with a rewrite which doesn't cause SWIG
	  warnings and is zero-byte safe.  The guile bindings are still
	  a long way from actually working though.

Sun Feb 12 12:31:21 GMT 2006  Olly Betts <olly@survex.com>

	* README: SWIG 1.3.28 now released so change "will add" to "added".

Sun Feb 12 07:30:50 GMT 2006  Olly Betts <olly@survex.com>

	* java/org/xapian/Query.java: OP_* code 9 no longer exists, so add
	  it to those rejected by the validity check.

Sun Feb 12 07:28:11 GMT 2006  Olly Betts <olly@survex.com>

	* java/native/Query.cc: Fixed memory leak in
	  Query-from-array-of-strings constructor.

Sun Feb 12 07:22:39 GMT 2006  Olly Betts <olly@survex.com>

	* java/README: Add note about how wrapped methods are named.

Sun Feb 12 07:13:36 GMT 2006  Olly Betts <olly@survex.com>

	* java/native/org_xapian_XapianJNI.cc,java/native/utils.cc,
	  java/native/xapian_jni.h: Eliminate the "_errormap" hashmap -
	  we don't need to use RTTI here, since Xapian::Error subclasses
	  can tell you their typename directly (using get_type()).

Sat Feb 11 13:10:04 GMT 2006  Olly Betts <olly@survex.com>

	* java/org/xapian/Query.java: Comment out no longer used nativeStuff
	  and nativeOperator.

Fri Feb 10 18:20:36 GMT 2006  Olly Betts <olly@survex.com>

	* java/native/xapian_jni.h: Fix 2 typos in comments.

Fri Feb 10 10:17:12 GMT 2006  Olly Betts <olly@survex.com>

	* TODO: Update: SwigValueWrapper is no longer used for std::pair;
	  CamelCase is now used for C#.
	* Makefile.am: Ship TODO.
	* README: Add reference to TODO.

Fri Feb 10 08:15:54 GMT 2006  Olly Betts <olly@survex.com>

	* java/native/Enquire.cc,java/native/org_xapian_XapianJNI.h,
	  java/org/xapian/XapianJNI.java: Fix updated wrapper for
	  Enquire::set_query.